// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot if the list is empty 1`] = `null`;

exports[`should match snapshot if the list is expanded 1`] = `
[
  <h2>
    Choose a clinic from the following list:
    <abbr
      className="usa-hint usa-hint--required"
    >
       *
    </abbr>
  </h2>,
  <form
    className="usa-form usa-form--large"
  >
    <fieldset
      className="usa-fieldset"
    >
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC ZERO"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC ZERO"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC ZERO"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC ZERO
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                0000 St, Helena, MT 00000
              </div>
              <div
                className="clinic-phone"
              >
                (000) 000-0000
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC ONE"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC ONE"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC ONE"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC ONE
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                1111 St, Helena, MT 11111
              </div>
              <div
                className="clinic-phone"
              >
                (111) 111-1111
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC TWO"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC TWO"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC TWO"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC TWO
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                2222 St, Helena, MT 22222
              </div>
              <div
                className="clinic-phone"
              >
                (222) 222-2222
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC THREE"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC THREE"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC THREE"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC THREE
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                3333 St, Helena, MT 33333
              </div>
              <div
                className="clinic-phone"
              >
                (333) 333-3333
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC FOUR"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC FOUR"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC FOUR"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC FOUR
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                4444 St, Helena, MT 44444
              </div>
              <div
                className="clinic-phone"
              >
                (444) 444-4444
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC FIVE"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC FIVE"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC FIVE"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC FIVE
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                5555 St, Helena, MT 55555
              </div>
              <div
                className="clinic-phone"
              >
                (555) 555-5555
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC SIX"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC SIX"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC SIX"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC SIX
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                6666 St, Helena, MT 66666
              </div>
              <div
                className="clinic-phone"
              >
                (666) 666-6666
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC SEVEN"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC SEVEN"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC SEVEN"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC SEVEN
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                7777 St, Helena, MT 77777
              </div>
              <div
                className="clinic-phone"
              >
                (777) 777-7777
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={true}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC EIGHT"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC EIGHT"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC EIGHT"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC EIGHT
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                8888 St, Helena, MT 88888
              </div>
              <div
                className="clinic-phone"
              >
                (888) 888-8888
              </div>
            </div>
          </div>
        </label>
      </div>
    </fieldset>
    <button
      className="usa-button usa-button--small display-block margin-top-6"
      disabled={false}
      onClick={[Function]}
    >
      Continue
    </button>
  </form>,
]
`;

exports[`should match snapshot if the list is not expanded 1`] = `
[
  <h2>
    Choose a clinic from the following list:
    <abbr
      className="usa-hint usa-hint--required"
    >
       *
    </abbr>
  </h2>,
  <form
    className="usa-form usa-form--large"
  >
    <fieldset
      className="usa-fieldset"
    >
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC ZERO"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC ZERO"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC ZERO"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC ZERO
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                0000 St, Helena, MT 00000
              </div>
              <div
                className="clinic-phone"
              >
                (000) 000-0000
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC ONE"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC ONE"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC ONE"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC ONE
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                1111 St, Helena, MT 11111
              </div>
              <div
                className="clinic-phone"
              >
                (111) 111-1111
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC TWO"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC TWO"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC TWO"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC TWO
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                2222 St, Helena, MT 22222
              </div>
              <div
                className="clinic-phone"
              >
                (222) 222-2222
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        className="usa-radio"
      >
        <input
          checked={false}
          className="usa-radio__input usa-radio__input--tile"
          id="CLINIC THREE"
          onChange={[MockFunction]}
          type="radio"
          value="CLINIC THREE"
        />
        <label
          className="usa-radio__label"
          htmlFor="CLINIC THREE"
        >
          <div
            className="clinic-info"
          >
            <div
              className="clinic-name"
            >
              CLINIC THREE
            </div>
            <div
              className="usa-checkbox__label-description"
            >
              <div
                className="clinic-street-address"
              >
                3333 St, Helena, MT 33333
              </div>
              <div
                className="clinic-phone"
              >
                (333) 333-3333
              </div>
            </div>
          </div>
        </label>
      </div>
      <button
        className="usa-button usa-button--small display-block usa-button--unstyled margin-top-1"
        onClick={[Function]}
      >
        Show more clinic options
      </button>
    </fieldset>
    <button
      className="usa-button usa-button--small display-block margin-top-6"
      disabled={false}
      onClick={[Function]}
    >
      Continue
    </button>
  </form>,
]
`;
